--- a/src/components/room-list/room-list.css
+++ b/src/components/room-list/room-list.css
@@ -1,8 +1,9 @@
 .room-list {
+  position: relative;
   display: inline-block;
   width: 320px;
   height: 100vh;
-  background: #F4F4F4;
+  background: #fff;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
@@ -41,10 +42,10 @@
   background-color: rgba(255, 255, 255, 0.5);
 }
 
-.room-list__item-title{ 
+.room-list__item-title{
   white-space: nowrap;
   overflow: hidden;
-  text-overflow: ellipsis; 
+  text-overflow: ellipsis;
   max-width: 230px;
   display: block;
   font-style: normal;
@@ -71,3 +72,48 @@
 .room-list__item:hover {
   border-bottom: 6px solid #15C7FF;
 }
+
+.room-list__create{
+  width: 48px;
+  height: 48px;
+  background-color: #fff;
+  box-shadow: 0px 0px 10px rgba(21, 200, 255, 0.75);
+  border-radius: 50%;
+  position: absolute;
+  z-index: 2;
+  bottom: 70px;
+  right: 15px;
+  color: #15c8ff;
+  font-size: 32px;
+  font-weight: bold;
+}
+
+.room-list__create:hover {
+  color: #fff;
+  background-color: #15c8ff;
+  box-shadow: 0;
+}
+
+.room-settings{
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 48px;
+  display: flex;
+  flex-direction: row;
+}
+
+.room-settings__item{
+  width: 50%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #15c8ff;
+  cursor: pointer;
+}
+
+svg{
+  fill: #f9f9f9;
+}
+
