--- a/src/components/room-list/room-list.css
+++ b/src/components/room-list/room-list.css
@@ -76,7 +76,7 @@
 .room-list__create{
   width: 48px;
   height: 48px;
-  background-color: #fff;
+  background-color: #ffffff;
   box-shadow: 0px 0px 10px rgba(21, 200, 255, 0.75);
   border-radius: 50%;
   position: absolute;
@@ -91,7 +91,7 @@
 .room-list__create:hover {
   color: #fff;
   background-color: #15c8ff;
-  box-shadow: 0;
+  box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.75);
 }
 
 .room-settings{
@@ -117,3 +117,30 @@ svg{
   fill: #f9f9f9;
 }
 
+.user-view{
+  width: 100%;
+  position: absolute;
+  bottom: 48px;
+  height: 60px;
+  background-color: rgba(21, 200, 255, 0.75);
+  border-top-right-radius: 50%;
+  gap: 20px;
+  align-items: center;
+  justify-content: flex-start;
+  display: flex;
+  padding-left: 15px;
+  flex-direction: row;
+}
+
+.user-avatar{
+  width: 48px;
+  height: 48px;
+  border-radius: 4px;
+  background-color: #005f7c;
+}
+
+.user-name{
+  color: #005f7c;
+  font-size: 18px;
+  font-weight: bold;
+}
