--- a/src/components/room-list/room-list.css
+++ b/src/components/room-list/room-list.css
@@ -16,7 +16,11 @@
   color: rgba(0, 0, 0, 0.38);
   margin: 23px 58px;
 }
-
+.room_list-items{
+  width: 100%;
+  height: calc(100% - 191px);
+  overflow-y: auto;
+}
 .room-list__item {
   cursor: pointer;
   width: 300px;
