--- a/src/components/room-list/room-list.css
+++ b/src/components/room-list/room-list.css
@@ -98,7 +98,7 @@
 .room-list__create:hover {
   color: #fff;
   background-color: #15c8ff;
-  box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.75);
+  box-shadow: 0px 0px 10px rgba(0, 95, 124, .75);
 }
 
 .room-settings{
