--- a/src/components/room-chat/room-chat.css
+++ b/src/components/room-chat/room-chat.css
@@ -1,9 +1,44 @@
 .room-chat{
   width: 300px;
-  height: 400px;
-  background-color: red;
+  height: calc(100vh - 120px);
+  background-color: #f9f9f9;
   z-index: 1;
+  position: fixed;
+  right: 0;
+  overflow-y: scroll;
+  padding-top: 10px;
+  font-size: 13px;
+  padding-left: 10px;
+  color: black
+}
+
+.room-chat_shadow{
+  z-index: 0;
+  width: 300px;
+  height: calc(100% - 40px);
   position: fixed;
   bottom: 0;
   right: 0;
+  -webkit-box-shadow: -17px 4px 8px 0px rgba(34, 60, 80, 0.2);
+  -moz-box-shadow: -17px 4px 8px 0px rgba(34, 60, 80, 0.2);
+  box-shadow: -17px 4px 8px 0px rgba(34, 60, 80, 0.2);
+}
+
+.chat-input{
+  background-color: #eee;
+  width: 300px;
+  height: 80px;
+  position: fixed;
+  z-index: 1;
+  right: 0;
+  bottom: 0;
+}
+
+.chat-input_textarea{
+  width: 100%;
+  height: 100%;
+  background-color: #f9f9f9;
+  border-top: 2px solid black;
+  resize: none;
+  padding: 4px;
 }
