--- a/src/pages/room/room.css
+++ b/src/pages/room/room.css
@@ -6,7 +6,8 @@
   align-items: center;
   position: fixed;
   justify-content: space-evenly;
-  color: #005f7c
+  color: #005f7c;
+  top: 0px;
 }
 
 .view-content{
