--- a/src/pages/room/room.css
+++ b/src/pages/room/room.css
@@ -14,8 +14,8 @@
   position: absolute;
   top: 60px;
   display: grid;
-  grid-template-columns: 200px 200px 200px;
-  grid-template-rows: 150px 150px 150px;
+  grid-template-columns: 400px 400px;
+  grid-template-rows: 300px 300px;
   gap: 20px;
   height: calc(100vh - 60px);
   width: calc(100% - 400px);
@@ -24,10 +24,28 @@
 }
 
 .user-video {
-  background-color: rgba(0, 95, 124, .75);
+  position: relative;
+  background-color: #212121;
   width: 100%;
-  transform: scale(-1, 1);
   height: 100%;
+}
+
+.user-screencast {
+    transform: scale(-1, 1);
+}
+
+.user-video_titel {
+  width: 100%;
+  height: 30px;
+  padding-top: 5px;
+  text-align: center;
+  z-index: 2;
+  position: absolute;
+  left: 0;
+  background-color: #212121;
+  font-size: 14px;
+  bottom: 0;
+  color: #fff
 }
 
 .room-leave {
