--- a/src/pages/room/room.css
+++ b/src/pages/room/room.css
@@ -1,3 +1,4 @@
+/* room  */
 .room-header {
   width: 100%;
   height: 40px;
@@ -9,7 +10,6 @@
   color: #005f7c;
   top: 0px;
 }
-
 
 .view-content {
   position: absolute;
